--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	
+		<meta charset="UTF-8">
+		<meta name="keywords" content="Python, C#, .NET">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		<title>Curtis Pearson</title>
+		<meta name="title" content="Curtis Pearson">
+		<meta name="description" content="Portfolio website for Curtis Pearson software engineer">
 	</head>
 	<body>
 		<h1>hello</h1>
