--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
 		<meta charset="UTF-8">
 		<meta name="keywords" content="Python, C#, .NET">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="main.css">
 
 		<title>Curtis Pearson</title>
 		<meta name="title" content="Curtis Pearson">
 		<meta name="description" content="Portfolio website for Curtis Pearson software engineer">
 	</head>
 	<body>
-		<h1>hello</h1>
+		<div class="container">
+			<div class="sub-container">
+				<div class="about-me">
+					<h1>Curtis Pearson</h1>
+				</div>
+				<div class="skills">
+					<h1>Skills</h1>
+				</div>
+				<div class="projects">
+					<h1>Projects</h1>
+				</div>
+				<div class="links">
+					<h1>Links</h1>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
