--- a/index.html
+++ b/index.html
@@ -4,28 +4,54 @@
 		<meta charset="UTF-8">
 		<meta name="keywords" content="Python, C#, .NET">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="./assets/main.css">
 
 		<title>Curtis Pearson</title>
 		<meta name="title" content="Curtis Pearson">
 		<meta name="description" content="Portfolio website for Curtis Pearson software engineer">
+
+		<script src="https://kit.fontawesome.com/594ee20037.js" crossorigin="anonymous"></script>
+		<link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
 	</head>
 	<body>
 		<div class="container">
-			<div class="sub-container">
-				<div class="about-me">
+			<div class="layout">
+				<div class="about">
 					<h1>Curtis Pearson</h1>
+					<h2>I'm an aspiring Software Engineer with a passion for programming, studying at Derby University for my BSc (Hons) Degree in Computer Science.</h2>
 				</div>
 				<div class="skills">
 					<h1>Skills</h1>
+					<div class="logos">
+						<i class="fa-brands fa-python"></i>
+						<i class="devicon-c-plain colored"></i>
+						<i class="devicon-csharp-plain colored"></i>
+						<i class="devicon-cplusplus-plain colored"></i>
+						<i class="fa-brands fa-html5"></i>
+						<i class="fa-brands fa-css3-alt"></i>
+						<i class="fa-brands fa-js"></i>
+						<i class="fa-brands fa-php"></i>
+					</div>
 				</div>
 				<div class="projects">
 					<h1>Projects</h1>
 				</div>
 				<div class="links">
 					<h1>Links</h1>
+					<div class="logos">
+						<a href="https://github.com/Curtis-Pearson" target="_blank">
+							<i class="fa-brands fa-github"></i>
+						</a>
+						<a href="https://www.linkedin.com/in/curtis-pearson-40a566214" target="_blank">
+							<i class="fa-brands fa-linkedin"></i>
+						</a>
+						<a href="mailto:curtis.pearson4356@gmail.com" target="_blank">
+							<i class="fa-solid fa-envelope"></i>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
+		<script src="./assets/index.js"></script>
 	</body>
 </html>
