--- a/index.html
+++ b/index.html
@@ -17,16 +17,29 @@
 		<div class="container">
 			<div class="layout">
 				<div class="about">
-					<h1>Curtis Pearson</h1>
+					<div class="header">
+						<h1>Curtis Pearson</h1>
+						<div class="logos">
+							<a href="https://github.com/Curtis-Pearson" target="_blank">
+								<i class="fa-brands fa-github"></i>
+							</a>
+							<a href="https://www.linkedin.com/in/curtis-pearson-40a566214" target="_blank">
+								<i class="fa-brands fa-linkedin"></i>
+							</a>
+							<a href="mailto:curtis.pearson4356@gmail.com" target="_blank">
+								<i class="fa-solid fa-envelope"></i>
+							</a>
+						</div>
+					</div>
 					<h2>I'm an aspiring Software Engineer with a passion for programming, studying at Derby University for my BSc (Hons) Degree in Computer Science.</h2>
 				</div>
 				<div class="skills">
 					<h1>Skills</h1>
 					<div class="logos">
 						<i class="fa-brands fa-python"></i>
-						<i class="devicon-c-plain colored"></i>
-						<i class="devicon-csharp-plain colored"></i>
-						<i class="devicon-cplusplus-plain colored"></i>
+						<i class="devicon-c-plain"></i>
+						<i class="devicon-csharp-plain"></i>
+						<i class="devicon-cplusplus-plain"></i>
 						<i class="fa-brands fa-html5"></i>
 						<i class="fa-brands fa-css3-alt"></i>
 						<i class="fa-brands fa-js"></i>
@@ -35,20 +48,6 @@
 				</div>
 				<div class="projects">
 					<h1>Projects</h1>
-				</div>
-				<div class="links">
-					<h1>Links</h1>
-					<div class="logos">
-						<a href="https://github.com/Curtis-Pearson" target="_blank">
-							<i class="fa-brands fa-github"></i>
-						</a>
-						<a href="https://www.linkedin.com/in/curtis-pearson-40a566214" target="_blank">
-							<i class="fa-brands fa-linkedin"></i>
-						</a>
-						<a href="mailto:curtis.pearson4356@gmail.com" target="_blank">
-							<i class="fa-solid fa-envelope"></i>
-						</a>
-					</div>
 				</div>
 			</div>
 		</div>
