--- a/index.html
+++ b/index.html
@@ -19,36 +19,36 @@
 			<div class="layout">
 				<div class="about">
 					<div class="header">
-						<h1>Curtis Pearson</h1>
-						<div class="logos">
+						<h1 class="fade-in">Curtis Pearson</h1>
+						<div class="logos right">
 							<a href="https://github.com/Curtis-Pearson" target="_blank">
-								<i class="fa-brands fa-github"></i>
+								<i class="fa-brands fa-github fade-from-right"></i>
 							</a>
 							<a href="https://www.linkedin.com/in/curtis-pearson-40a566214" target="_blank">
-								<i class="fa-brands fa-linkedin"></i>
+								<i class="fa-brands fa-linkedin fade-from-right"></i>
 							</a>
 							<a href="mailto:curtis.pearson4356@gmail.com" target="_blank">
-								<i class="fa-solid fa-envelope"></i>
+								<i class="fa-solid fa-envelope fade-from-right"></i>
 							</a>
 						</div>
 					</div>
 					<h2>I'm an aspiring Software Engineer with a passion for programming, studying at Derby University for my BSc (Hons) Degree in Computer Science.</h2>
 				</div>
 				<div class="skills">
-					<h1>Skills</h1>
-					<div class="logos">
-						<i class="fa-brands fa-python"></i>
-						<i class="devicon-c-plain"></i>
-						<i class="devicon-csharp-plain"></i>
-						<i class="devicon-cplusplus-plain"></i>
-						<i class="fa-brands fa-html5"></i>
-						<i class="fa-brands fa-css3-alt"></i>
-						<i class="fa-brands fa-js"></i>
-						<i class="fa-brands fa-php"></i>
+					<h1 class="fade-in" style="animation-delay: 0.4s;">Skills</h1>
+					<div class="logos left">
+						<i class="fa-brands fa-python fade-from-left"></i>
+						<i class="devicon-c-plain fade-from-left"></i>
+						<i class="devicon-csharp-plain fade-from-left"></i>
+						<i class="devicon-cplusplus-plain fade-from-left"></i>
+						<i class="fa-brands fa-html5 fade-from-left"></i>
+						<i class="fa-brands fa-css3-alt fade-from-left"></i>
+						<i class="fa-brands fa-js fade-from-left"></i>
+						<i class="fa-brands fa-php fade-from-left"></i>
 					</div>
 				</div>
 				<div class="projects">
-					<h1>Projects</h1>
+					<h1 class="fade-in" style="animation-delay: 1.1s;">Projects</h1>
 				</div>
 			</div>
 		</div>
