--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<title>Curtis Pearson</title>
 		<meta name="title" content="Curtis Pearson">
-		<meta name="description" content="Portfolio website for Curtis Pearson software engineer">
+		<meta name="description" content="Portfolio website for Curtis Pearson Software Engineer">
 
 		<script src="https://kit.fontawesome.com/594ee20037.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
