--- a/index.html
+++ b/index.html
@@ -35,16 +35,18 @@
 					<h2>I'm an aspiring Software Engineer with a passion for programming, studying at Derby University for my BSc (Hons) Degree in Computer Science.</h2>
 				</div>
 				<div class="skills">
-					<h1 class="fade-in" style="animation-delay: 0.4s;">Skills</h1>
-					<div class="logos left">
-						<i class="fa-brands fa-python fade-from-left"></i>
-						<i class="devicon-c-plain fade-from-left"></i>
-						<i class="devicon-csharp-plain fade-from-left"></i>
-						<i class="devicon-cplusplus-plain fade-from-left"></i>
-						<i class="fa-brands fa-html5 fade-from-left"></i>
-						<i class="fa-brands fa-css3-alt fade-from-left"></i>
-						<i class="fa-brands fa-js fade-from-left"></i>
-						<i class="fa-brands fa-php fade-from-left"></i>
+					<div class="header">
+						<div class="logos left">
+							<i class="fa-brands fa-python fade-from-left"></i>
+							<i class="devicon-c-plain fade-from-left"></i>
+							<i class="devicon-csharp-plain fade-from-left"></i>
+							<i class="devicon-cplusplus-plain fade-from-left"></i>
+							<i class="fa-brands fa-html5 fade-from-left"></i>
+							<i class="fa-brands fa-css3-alt fade-from-left"></i>
+							<i class="fa-brands fa-js fade-from-left"></i>
+							<i class="fa-brands fa-php fade-from-left"></i>
+						</div>
+						<h1 class="fade-in" style="animation-delay: 0.4s;">Skills</h1>
 					</div>
 				</div>
 				<div class="projects">
