--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 							</a>
 						</div>
 					</div>
-					<h2>I'm an aspiring Software Engineer with a passion for programming, studying at Derby University for my BSc (Hons) Degree in Computer Science.</h2>
+					<h2>
+						I'm an aspiring Software Engineer with a passion for programming, 
+						studying at Derby University for my BSc (Hons) Degree in Computer Science.
+
+						In my spare time, I enjoy practicing guitar and socialising with friends.
+					</h2>
 				</div>
 				<div class="skills">
 					<div class="header">
