--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							</a>
 						</div>
 					</div>
-					<h2>
+					<h2 class="fade-in" style="animation-delay: 0.6s;">
 						I'm an aspiring Software Engineer with a passion for programming, 
 						studying at Derby University for my BSc (Hons) Degree in Computer Science.
 
@@ -51,11 +51,14 @@
 							<i class="fa-brands fa-js fade-from-left"></i>
 							<i class="fa-brands fa-php fade-from-left"></i>
 						</div>
-						<h1 class="fade-in" style="animation-delay: 0.4s;">Skills</h1>
+						<h1 class="fade-in" style="animation-delay: 0.9s;">Skills</h1>
 					</div>
 				</div>
 				<div class="projects">
-					<h1 class="fade-in" style="animation-delay: 1.1s;">Projects</h1>
+					<h1 class="fade-in" style="animation-delay: 1.5s;">Projects</h1>
+					<h2 class="fade-in" style="animation-delay: 2s;">
+						test
+					</h2>
 				</div>
 			</div>
 		</div>
