--- a/index.html
+++ b/index.html
@@ -19,44 +19,48 @@
 			<div class="layout">
 				<div class="about">
 					<div class="header">
-						<h1 class="fade-in">Curtis Pearson</h1>
-						<div class="logos right">
+						<h1>Curtis Pearson</h1>
+						<div class="logos">
 							<a href="https://github.com/Curtis-Pearson" target="_blank">
-								<i class="fa-brands fa-github fade-from-right"></i>
+								<i class="fa-brands fa-github"></i>
 							</a>
 							<a href="https://www.linkedin.com/in/curtis-pearson-40a566214" target="_blank">
-								<i class="fa-brands fa-linkedin fade-from-right"></i>
+								<i class="fa-brands fa-linkedin"></i>
 							</a>
 							<a href="mailto:curtis.pearson4356@gmail.com" target="_blank">
-								<i class="fa-solid fa-envelope fade-from-right"></i>
+								<i class="fa-solid fa-envelope"></i>
 							</a>
 						</div>
 					</div>
-					<h2 class="fade-in" style="animation-delay: 0.6s;">
+					<h2>
 						I'm an aspiring Software Engineer with a passion for programming, 
 						studying at Derby University for my BSc (Hons) Degree in Computer Science.
-
 						In my spare time, I enjoy practicing guitar and socialising with friends.
 					</h2>
 				</div>
 				<div class="skills">
 					<div class="header">
-						<div class="logos left">
-							<i class="fa-brands fa-python fade-from-left"></i>
-							<i class="devicon-c-plain fade-from-left"></i>
-							<i class="devicon-csharp-plain fade-from-left"></i>
-							<i class="devicon-cplusplus-plain fade-from-left"></i>
-							<i class="fa-brands fa-html5 fade-from-left"></i>
-							<i class="fa-brands fa-css3-alt fade-from-left"></i>
-							<i class="fa-brands fa-js fade-from-left"></i>
-							<i class="fa-brands fa-php fade-from-left"></i>
+						<h1>Skills</h1>
+						<div class="logos">
+							<a><i class="fa-brands fa-python"></i></a>
+							<a><i class="devicon-c-plain"></i></a>
+							<a><i class="devicon-csharp-plain"></i></a>
+							<a><i class="devicon-cplusplus-plain"></i></a>
+							<a><i class="fa-brands fa-html5"></i></a>
+							<a><i class="fa-brands fa-css3-alt"></i></a>
+							<a><i class="fa-brands fa-js"></i></a>
+							<a><i class="devicon-php-plain"></i></a>
 						</div>
-						<h1 class="fade-in" style="animation-delay: 0.9s;">Skills</h1>
 					</div>
+					<h2>
+						test
+					</h2>
 				</div>
 				<div class="projects">
-					<h1 class="fade-in" style="animation-delay: 1.5s;">Projects</h1>
-					<h2 class="fade-in" style="animation-delay: 2s;">
+					<div class="header">
+						<h1>Projects</h1>
+					</div>
+					<h2>
 						test
 					</h2>
 				</div>
