--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 		<script src="https://kit.fontawesome.com/594ee20037.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+		<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet" />
 	</head>
 	<body>
-		<div class="glow"></div>
 		<div class="container">
 			<div class="layout">
 				<div class="about">
 					<div class="header">
-						<h1>Curtis Pearson</h1>
+						<h1>Hi, I'm <span class="name">Curtis</span>.</h1>
 						<div class="logos">
 							<a href="https://github.com/Curtis-Pearson" target="_blank">
 								<i class="fa-brands fa-github"></i>
@@ -33,9 +33,9 @@
 						</div>
 					</div>
 					<h2>
-						I'm an aspiring Software Engineer with a passion for programming, 
-						studying at Derby University for my BSc (Hons) Degree in Computer Science.
-						In my spare time, I enjoy practicing guitar and socialising with friends.
+						I'm an aspiring Software Engineer, studying at Derby University for my BSc (Hons) Degree in Computer Science.
+						I love the challenges of programming, testing my knowledge whilst learning new skills.
+						In my spare time, I enjoy practicing guitar, writing songs, playing video games and socialising with friends.
 					</h2>
 				</div>
 				<div class="skills">
@@ -53,7 +53,10 @@
 						</div>
 					</div>
 					<h2>
-						test
+						I've picked up a variety of skills and developed my approach to programming throughout my education.
+						I started learning <span class="program-language batch">Batch</span> when I was 12 years old... and I was hooked.
+						Moving onto <span class="program-language python">Python</span> shortly after, I spent many hours writing little programs and scripts for fun.
+						
 					</h2>
 				</div>
 				<div class="projects">
