--- a/index.html
+++ b/index.html
@@ -63,9 +63,16 @@
 					<div class="header">
 						<h1>Projects</h1>
 					</div>
-					<h2>
-						test
-					</h2>
+					<div class="glow"></div>
+					<div class="repos-wrapper">
+						<button class="repos-arrow prev" onclick="nextRepo()">
+							<i class="fa-solid fa-chevron-left"></i>
+						</button>
+						<div class="github-repos"></div>
+						<button class="repos-arrow next" onclick="nextRepo()">
+							<i class="fa-solid fa-chevron-right"></i>
+						</button>
+					</div>
 				</div>
 			</div>
 		</div>
