--- a/index.html
+++ b/index.html
@@ -65,11 +65,13 @@
 					</div>
 					<div class="glow"></div>
 					<div class="repos-wrapper">
-						<button class="repos-arrow prev" onclick="nextRepo()">
+						<button class="repos-arrow prev">
 							<i class="fa-solid fa-chevron-left"></i>
 						</button>
-						<div class="github-repos"></div>
-						<button class="repos-arrow next" onclick="nextRepo()">
+						<div class="repos-track">
+							<div class="repos-list"></div>
+						</div>
+						<button class="repos-arrow next">
 							<i class="fa-solid fa-chevron-right"></i>
 						</button>
 					</div>
