Functional repo slider

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 						</div>
 					</div>
 					<h2>
-						I'm an aspiring Software Engineer, studying at Derby University for my BSc (Hons) Degree in Computer Science.
-						I love the challenges of programming, testing my knowledge whilst learning new skills.
+						I'm an aspiring Software Engineer with a passion for programming, studying at Derby University for my BSc (Hons) Degree in Computer Science.
+						I embrace the challenges of programming, tackling new projects with enthusiasm.
 						In my spare time, I enjoy practicing guitar, writing songs, playing video games and socialising with friends.
 					</h2>
 				</div>
@@ -53,10 +53,10 @@
 						</div>
 					</div>
 					<h2>
-						I've picked up a variety of skills and developed my approach to programming throughout my education.
-						I started learning <span class="program-language batch">Batch</span> when I was 12 years old... and I was hooked.
+						I am always willing to develop new skills through education and experience, having a results-driven mindset towards my projects.
+						I started learning <span class="program-language batch">Batch</span> when I was 12 years old which started my programming journey.
 						Moving onto <span class="program-language python">Python</span> shortly after, I spent many hours writing little programs and scripts for fun.
-						
+						During further education, I picked up a variety of programming languages including <span class="program-language c">C</span>, <span class="program-language cs">C#</span> and <span class="program-language cpp">C++</span>.
 					</h2>
 				</div>
 				<div class="projects">
