Reworked repo slider

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<h2>
 						I am always willing to develop new skills through education and experience, having a results-driven mindset towards my projects.
 						I started learning <span class="program-language batch">Batch</span> when I was 12 years old which started my programming journey.
-						Moving onto <span class="program-language python">Python</span> shortly after, I spent many hours writing little programs and scripts for fun.
+						Moving onto <span class="program-language python">Python</span> shortly after, I spent many hours writing programs and scripts for fun.
 						During further education, I picked up a variety of programming languages including <span class="program-language c">C</span>, <span class="program-language cs">C#</span> and <span class="program-language cpp">C++</span>.
 					</h2>
 				</div>
