Updated About Me Text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						</div>
 					</div>
 					<h2>
-						I'm an aspiring Software Engineer with a passion for programming, studying at Derby University for my BSc (Hons) Degree in Computer Science.
+						I'm an aspiring Software Engineer with a passion for programming, graduating from Derby University with a First-Class Honours BSc in Computer Science.
 						I embrace the challenges of programming, tackling new projects with enthusiasm.
 						In my spare time, I enjoy practicing guitar, writing songs, playing video games and socialising with friends.
 					</h2>
